# supernova

./: .clippy.toml  .env.example  .gitattributes  .gitignore  .trivy.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_STATUS.md  DevOps-Setup-Guide.md  Dockerfile  FINAL_SOLUTION.md  FRONTEND_INTEGRATION_GUIDE.md  Implementation-Progress-Report.md  LICENSE  OPTIMIZATION_SUMMARY.md  PROJECT_ROADMAP.md  PROJECT_STATUS.md  PROJECT_UPDATE.md  README.md  RPC_IMPLEMENTATION.md  SECURITY.md  SuperNova Overview.md  SuperNova-Production-Roadmap.md  TESTNET_FIXES_UPDATED.md  TESTNET_STATUS.md  TESTNET_SUMMARY.md  UPDATE_SUMMARY.md  clippy.toml  config.toml  deny.toml  deploy_testnet_services.sh  deploy_testnet_subdomains.sh  deploy_testnet_web.sh  docker_setup.sh  nginx_main_testnet.conf  nginx_testnet_config.conf  recovery.md  run_node.sh  (+6 more)
btclib/: Cargo.toml
btclib/benches/: comprehensive_benchmarks.rs
btclib/docs/: emissions_framework.md  network_simulation.md
btclib/examples/: ascii_art_demo.rs  atomic_swap_demo.rs  atomic_swap_monitor_demo.rs  crypto_benchmark.rs  emissions_calculator.rs  emissions_tracking.rs  emissions_visualizer.rs  environmental_api_usage.rs  environmental_dashboard_demo.rs  environmental_demo.rs  filecoin_inspired_env_demo.rs  lightning_demo.rs  miner_reporting_demo.rs  network_simulation.rs  quantum_performance_benchmark.rs  quantum_performance_simple.rs  quantum_signatures_demo.rs  quantum_test.rs  test_emissions_calc.rs  testnet_demo.rs  utxo_optimization_demo.rs
btclib/examples/dashboard/: index.html
btclib/src/: api.rs  block.rs  cli.rs  config.rs  consensus_verification.rs  error.rs  error_handling_tests.rs  errors.rs  freeze.rs  hash.rs  journal.rs  lib.rs  p2p.rs  rpc.rs  security_mitigation.rs  state.rs  test_common.rs  transaction.rs  transaction_processor.rs  validation.rs  wallet.rs
btclib/src/atomic_swap/: api.rs  api_test.rs  bitcoin_adapter.rs  cache.rs  confidential.rs  crypto.rs  error.rs  htlc.rs  metrics.rs  mod.rs  monitor.rs  websocket.rs  zk_swap.rs
btclib/src/blockchain/: difficulty.rs  mod.rs
btclib/src/consensus/: difficulty.rs  fork_resolution_attack_tests.rs  fork_resolution_v2.rs  mod.rs  secure_fork_resolution.rs  security_fix_tests.rs  (+3 more)
btclib/tests/: crypto_test.rs  environmental_validation.rs  extended_transaction_tests.rs  integration_tests.rs  quantum_cryptography_validation.rs  transaction_malleability_tests.rs  validation_tests.rs
cli/: Cargo.toml  README.md
cli/src/: config 2.rs  config.rs  lib.rs  main.rs  rpc.rs  wallet.rs
fuzz/: Cargo.toml  README.md  run_afl.sh  stop_fuzzing.sh
fuzz/corpus/: README.md
fuzz/targets/: block_validation.rs  consensus.rs  p2p_messages.rs  quantum_crypto.rs  transaction_parsing.rs
green-verification/: Cargo.toml
green-verification/src/: attestation.rs  error.rs  incentive.rs  lib.rs  nullifier.rs  offset.rs  oracle.rs  registry.rs  treasury.rs  types.rs
green-verification/tests/: attestation_tests.rs  redistribution_property_tests.rs
miner/: Cargo.toml
miner/src/: difficulty.rs  lib.rs  main.rs
miner/tests/: treasury_validation_tests.rs
node/: Cargo.toml  build.rs
node/benches/: propagation.rs  utxo_benchmarks.rs
node/examples/: emit_openapi.rs
node/src/: api_facade.rs  config.rs  lib.rs  main.rs  node.rs  recovery.rs  shutdown.rs  thread_safety_fix.rs  thread_safety_test.rs  wallet_manager.rs
node/tests/: api_edge_cases_tests.rs  api_integration_tests.rs  api_rate_limiting_tests.rs  chain_sync_deadlock_tests.rs  mempool_dos_protection_tests.rs  metrics_privacy_tests.rs  network_eclipse_prevention_tests.rs  network_edge_cases_tests.rs  network_message_size_tests.rs  storage_corruption_recovery_tests.rs  storage_edge_cases_tests.rs  unsafe_block_documentation_tests.rs  utxo_double_spend_security_tests.rs  utxo_reorg_integration.rs  utxo_reorg_tests.rs
quantum_validation/: Cargo.toml
quantum_validation/src/: main.rs
supernova-core/: Cargo.toml
supernova-core/benches/: comprehensive_benchmarks.rs  tps_harness.rs
supernova-core/examples/: ascii_art_demo.rs  atomic_swap_demo.rs  atomic_swap_monitor_demo.rs  crypto_benchmark.rs  emissions_calculator.rs  emissions_tracking.rs  emissions_visualizer.rs  environmental_dashboard_demo.rs  environmental_demo.rs  filecoin_inspired_env_demo.rs  lightning_demo.rs  memory_profile.rs  miner_reporting_demo.rs  network_simulation.rs  quantum_performance_benchmark.rs  quantum_performance_simple.rs  quantum_signatures_demo.rs  quantum_test.rs  refund_flow_demo.rs  test_emissions_calc.rs  testnet_demo.rs  utxo_optimization_demo.rs
supernova-core/src/: api.rs  cli.rs  config.rs  consensus_verification.rs  errors.rs  freeze.rs  lib.rs  rpc.rs  security_mitigation.rs  state.rs
supernova-core/tests/: atomic_swap_rollback_tests.rs  block_validation_complexity_tests.rs  consensus_attack_tests.rs  consensus_edge_cases_tests.rs  consensus_fork_resolution_tests.rs  crypto_nist_vectors.rs  difficulty_manipulation_tests.rs  environmental_bonus_overflow_tests.rs  environmental_validation.rs  extended_transaction_tests.rs  integration_tests.rs  lightning_backup_integration_tests.rs  lightning_htlc_timeout_tests.rs  lightning_state_machine_tests.rs  oracle_byzantine_hardening_tests.rs  p0_integration_tests.rs  proptests.rs  quantum_cryptography_validation.rs  quantum_downgrade_prevention_tests.rs  transaction_fee_overflow_tests.rs  transaction_malleability_tests.rs  treasury_overflow_tests.rs  validation_edge_cases_tests.rs  validation_tests.rs
tests/: Cargo.toml  integration_tests.rs  quantum_security_test.rs  quantum_security_tests.rs  security_audit.rs  test_p2p_network.rs  testnet_readiness_test.rs
tests/load/: transaction_load.js
tests/src/: bench.rs  integration_tests.rs  lib.rs  network_partition_tests.rs  network_tests.rs  performance_tests.rs  test_framework.rs
wallet/: Cargo.toml
wallet/src/: backup_warning.rs  cli.rs  core.rs  hdwallet.rs  history.rs  lib.rs  main.rs  network.rs  password_strength.rs
wallet/tests/: quantum_hd_derivation_tests.rs  wallet_backup_encryption_tests.rs
(+674 files in other folders)
