[workspace]
members = [
    "supernova",
    "btclib",
    "node",
    "miner",
    "wallet",
    "tests",
    "testnet",
    "cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SuperNova Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25", features = ["full"] }
thiserror = "1.0"
clap = "3.2"
tracing = "0.1"
sled = "0.34"
sha2 = "0.10"
secp256k1 = "0.24"
rand = "0.8"
libp2p = { version = "0.50", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.4"
toml = "0.7"
hex = "0.4"
bincode = "1.3"
tempfile = "3.3"
notify = "5.0"
once_cell = "1.17"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
config = "0.13"
uuid = { version = "1.3", features = ["v4"] }
memmap2 = "0.7"
siphasher = "0.3"
log = "0.4"