[workspace]
members = [
    "btclib",
    "node",
    "cli",
    "miner",
    "wallet",
    "quantum_validation",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Supernova Network Team"]
license = "MIT"
repository = "https://github.com/Carbon-Twelve-C12/supernova"

[workspace.dependencies]
# Common dependencies used across multiple crates
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4" 