[workspace]
members = [
    "supernova-core",
    "node",
    "cli",
    "miner",
    "wallet",
    "quantum_validation",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Supernova Network Team"]
license = "MIT"
repository = "https://github.com/Carbon-Twelve-C12/supernova"

[workspace.dependencies]
# Common dependencies used across multiple crates
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
# Constant-time primitives for timing-attack-resistant byte comparisons
# (HTLC preimage, MAC, signature-hash checks). Already a transitive dep via
# pqcrypto; pinned here so crypto-handling crates can use it directly.
subtle = "2"

# Release builds must NOT silently wrap integer arithmetic (audit Critical #3):
# a wrapped u64 on the value/fee/subsidy path could mint coins. This is a
# defense-in-depth backstop — the consensus accept path also uses explicit
# checked arithmetic and never relies on this flag — but it converts any
# un-audited overflow elsewhere into a loud panic instead of a silent mint.
[profile.release]
overflow-checks = true
