[package]
name = "btclib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
url = "2.3"
lru = "0.11"
sled = "0.34"
prometheus = "0.13"
lazy_static = "1.4"
sysinfo = "0.29"
uuid = { version = "1.3", features = ["v4"] }
merlin = "3.0"
curve25519-dalek = { version = "4.0", features = ["serde"] }
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "dns", "gossipsub"] }
futures = "0.3"
async-trait = "0.1"
blake3 = "1.3"
secp256k1 = { version = "0.27", features = ["rand"] }
toml = "0.8"
rayon = "1.7"
clap = { version = "4.3", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace"] }
hyper = { version = "0.14", features = ["full"] }
config = "0.13"
crossterm = "0.27"
tui = "0.19"
ratatui = "0.24.0"
tonic = "0.10.2"
rust-crypto = "0.2.36"
rust_decimal = { version = "1.31", features = ["serde"] }

[dependencies.prost]
version = "0.12"
default-features = false
features = ["prost-derive"]

[dependencies.time]
version = "0.3"
features = ["formatting", "serde"]

[dev-dependencies]
tempfile = "3.5"
quickcheck = "1.0"
proptest = "1.2"
test-case = "3.1.0"

[build-dependencies]
tonic-build = "0.10.2"
