[package]
name = "btclib"
version = "0.1.0"
edition = "2021"

[features]
default = []
lightning = []  # Re-enabled - core blockchain is production-ready

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde_arrays = "0.1"
bincode = "1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"
lru = "0.11"
sled = "0.34"
prometheus = "0.13"
lazy_static = "1.4"
sysinfo = "0.29"
uuid = { version = "1.3", features = ["v4"] }
merlin = "3.0"
curve25519-dalek = { version = "4.0", features = ["serde"] }
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "dns", "gossipsub"] }
futures = "0.3"
async-trait = "0.1"
blake3 = "1.3"
secp256k1 = { version = "0.27", features = ["rand"] }
ripemd = "0.1"
toml = "0.8"
rayon = "1.7"
clap = { version = "4.3", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace"] }
hyper = { version = "0.14", features = ["full"] }
config = "0.13"
crossterm = "0.27"
tui = "0.19"
ratatui = "0.24.0"
tonic = "0.10.2"
rust-crypto = "0.2.36"
rust_decimal = { version = "1.31", features = ["serde"] }
dashmap = "5.4"
bytes = "1.0"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
ed25519-dalek = "2.0"
siphasher = "0.3"
memmap2 = "0.7"
num_cpus = "1.16"
priority-queue = "2.0"  # For Lightning Network routing
argon2 = "0.5"
bech32 = "0.9"
chacha20poly1305 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
base64 = "0.21"
bip39 = "2.0"

[dependencies.prost]
version = "0.12"
default-features = false
features = ["prost-derive"]

[dependencies.time]
version = "0.3"
features = ["formatting", "serde"]

[dev-dependencies]
tempfile = "3.5"
quickcheck = "1.0"
proptest = "1.2"
test-case = "3.1.0"

[build-dependencies]
tonic-build = "0.10.2"
