[package]
name = "supernova-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "fuzz_block_validation"
path = "targets/block_validation.rs"

[[bin]]
name = "fuzz_transaction_parsing"
path = "targets/transaction_parsing.rs"

[[bin]]
name = "fuzz_consensus"
path = "targets/consensus.rs"

[[bin]]
name = "fuzz_quantum_crypto"
path = "targets/quantum_crypto.rs"

[[bin]]
name = "fuzz_p2p_messages"
path = "targets/p2p_messages.rs"

[[bin]]
name = "fuzz_difficulty_adjustment"
path = "targets/difficulty_adjustment.rs"

[dependencies]
btclib = { path = "../btclib", features = ["lightning"] }
afl = "0.15"
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
honggfuzz = "0.5"

[dependencies.supernova-node]
path = "../node"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.dev]
panic = "abort"
opt-level = 3
debug = true