[package]
name = "supernova-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "fuzz_block_validation"
path = "targets/block_validation.rs"

[[bin]]
name = "fuzz_transaction_parsing"
path = "targets/transaction_parsing.rs"

[[bin]]
name = "fuzz_consensus"
path = "targets/consensus.rs"

[[bin]]
name = "fuzz_quantum_crypto"
path = "targets/quantum_crypto.rs"

[[bin]]
name = "fuzz_p2p_messages"
path = "targets/p2p_messages.rs"

[dependencies]
supernova-core = { path = "../supernova-core", features = ["lightning"] }
afl = "0.15"
bincode = "1"
arbitrary = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
debug = true
overflow-checks = true

[profile.dev]
opt-level = 3
debug = true
overflow-checks = true
