[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
btclib = { path = "../btclib", features = ["lightning"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
async-trait = "0.1"
bincode = "1.3"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"