[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
btclib = { path = "../btclib", features = ["lightning"] }
wallet = { path = "../wallet" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
toml = "0.7"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
once_cell = "1.8"
notify = { version = "5.0", features = ["serde"] }

# P2P networking dependencies
libp2p = { version = "0.41", features = ["tcp-tokio", "mdns", "gossipsub", "noise", "mplex", "yamux", "identify", "kad"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
void = "1.0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
byteorder = "1.4"

# Web API dependencies
actix-web = "4.0"
actix-rt = "2.0"
actix-cors = "0.6"
utoipa = { version = "4.0", features = ["actix_extras"] }

# Storage and utils
sled = "0.34"
thiserror = "1.0"
dashmap = "5.4"
hex = "0.4"
bincode = "1.3"
tempfile = "3.3"
sha2 = "0.10"
bytes = "1.0"
lru = "0.12.1"
sysinfo = "0.29"
blake3 = "1.5"
maxminddb = "0.24"
warp = "0.3"

[lib]
name = "node"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/main.rs"
