[package]
name = "supernova-node"
version = "1.0.0"
edition = "2021"
authors = ["Supernova Network Team"]
description = "Supernova blockchain node - carbon-negative, quantum-secure"

[[bin]]
name = "supernova-node"
path = "src/main.rs"

[[bin]]
name = "supernova-oracle"
path = "src/bin/oracle.rs"

[[bin]]
name = "mine_genesis"
path = "src/bin/mine_genesis.rs"

[features]
default = ["testnet"]
lightning = ["supernova-core/lightning"]
environmental = []
testnet = []

[dependencies]
supernova-core = { path = "../supernova-core", features = ["lightning"] }
wallet = { path = "../wallet" }
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
sha3 = "0.10"
siphasher = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.7"
dirs = "5.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
sysinfo = "0.30"
async-trait = "0.1"
flate2 = "1.0"
tar = "0.4"
notify = "6.0"
void = "1.0"
byteorder = "1.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# P2P networking dependencies
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "dns", "gossipsub", "kad", "identify", "ping", "mdns", "tokio", "macros"] }
multiaddr = "0.18"
futures = "0.3"
futures-util = "0.3"
base64 = "0.21"
quinn = "0.8"
rcgen = "0.9"
ring = "0.16"
trust-dns-resolver = "0.22"
pnet = "0.31"
socket2 = "0.4"
nix = { version = "0.26", features = ["net"] }
if-addrs = "0.7"
get_if_addrs = "0.5"
network-interface = "1.0"
hostname = "0.3"
local-ip-address = "0.5"
public-ip = "0.2"
stun_codec = "0.3"
actix = "0.13"
actix-service = "2.0"
crc32fast = "1.3"
dotenv = "0.15"
lazy_static = "1.4"
parking_lot = "0.12"
smallvec = "1.10"
regex = "1.10"
tui = "0.19"
ratatui = "0.24.0"
once_cell = "1.17"

# Web API dependencies
actix-web = "4.4"
actix-rt = "2.5"
actix-cors = "0.6"
utoipa = { version = "4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }

# Storage and utils
sled = "0.34"
dashmap = "5.0"
hex = "0.4"
bincode = "1.3"
tempfile = "3.2"
sha2 = "0.10"
bytes = "1.0"
lru = "0.12.1"
blake3 = "1.5"
maxminddb = "0.24"
warp = "0.3"
memmap2 = "0.9"
axum = "0.7"
geo = "0.27"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.29", features = ["bundled"] }

# Core dependencies
getrandom = "0.2"

# New dependency
static_assertions = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.12"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl", "rustc", "cargo"] }

[lib]
name = "node"
path = "src/lib.rs"

[[bench]]
name = "utxo_benchmarks"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

