[package]
name = "quantum_validation"
version = "0.1.0"
edition = "2021"

[dependencies]
# Quantum cryptography libraries
pqcrypto-dilithium = "0.4"
pqcrypto-sphincsplus = "0.6"
pqcrypto-traits = "0.3"

# Cryptographic dependencies
sha2 = "0.10"
rand = "0.8"
secp256k1 = { version = "0.27", features = ["rand"] }
ed25519-dalek = "2.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"

[dev-dependencies]
criterion = "0.5" 