[package]
name = "supernova-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
lightning = []  # Re-enabled - core blockchain is production-ready
atomic-swap = ["bitcoin", "bitcoincore-rpc", "bulletproofs", "curve25519-dalek-ng", "bellman", "bls12_381", "ff"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde_arrays = "0.1"
bincode = "1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3"
lru = "0.11"
sled = "0.34"
prometheus = "0.13"
lazy_static = "1.4"
sysinfo = "0.29"
merlin = "3.0"
curve25519-dalek = { version = "4.0", features = ["serde"] }
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "dns", "gossipsub", "tokio"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
blake3 = "1.3"
secp256k1 = { version = "0.27", features = ["rand", "serde"] }
ripemd = "0.1"
toml = "0.8"
rayon = "1.7"
clap = { version = "4.3", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace"] }
hyper = { version = "0.14", features = ["full"] }
config = "0.13"
crossterm = "0.27"
tui = "0.19"
ratatui = "0.24.0"
tonic = "0.10.2"
rust-crypto = "0.2.36"
rust_decimal = { version = "1.31", features = ["serde"] }
dashmap = "5.4"
bytes = "1.0"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-falcon = "0.3"
pqcrypto-kyber = "0.8"
ed25519-dalek = "2.0"
siphasher = "0.3"
memmap2 = "0.7"
num_cpus = "1.16"
priority-queue = "2.0"  # For Lightning Network routing
argon2 = "0.5"
bech32 = "0.9"
chacha20poly1305 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
base64 = "0.21"
bip39 = { version = "2.0", features = ["zeroize"] }
bitcoin = { version = "0.30", optional = true }
bitcoincore-rpc = { version = "0.17", optional = true }
bulletproofs = { version = "4.0", optional = true }
curve25519-dalek-ng = { version = "4.1", optional = true }
bellman = { version = "0.14", optional = true }
bls12_381 = { version = "0.8", optional = true }
ff = { version = "0.13", optional = true }

[dependencies.prost]
version = "0.12"
default-features = false
features = ["prost-derive"]

[dependencies.time]
version = "0.3"
features = ["formatting", "serde"]

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"

[build-dependencies]
tonic-build = "0.10.2"

[[bench]]
name = "comprehensive_benchmarks"
harness = false
