[package]
name = "supernova-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
node = { path = "../node" }
btclib = { path = "../btclib" }
miner = { path = "../miner" }
wallet = { path = "../wallet" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tempfile = "3.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
libp2p = "0.41"
rand = "0.8"
once_cell = "1.8"
hex = "0.4"
async-trait = "0.1"