[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core blockchain dependencies
btclib = { path = "../btclib" }

# Cryptography
secp256k1 = { version = "0.24", features = ["rand"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }