[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core blockchain dependencies
btclib = { path = "../btclib", features = ["lightning"] }

# Quantum-resistant cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
sha3 = "0.10"
rand = "0.8"
bech32 = "0.9"
zeroize = "1.6"
aes-gcm = "0.10"
argon2 = "0.5"

# Legacy cryptography (will be deprecated)
secp256k1 = { version = "0.24", features = ["rand"] }
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Database
sled = "0.34"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for network communication
reqwest = { version = "0.11", features = ["blocking"] }

# Bitcoin and HD wallet
bitcoin = { version = "0.31.0", features = ["rand", "serde"] }
bip39 = "2.0.0"
chrono = { version = "0.4.31", features = ["serde"] }

# UI and CLI
ratatui = "0.25.0"
crossterm = "0.27.0"
clap = { version = "4.4", features = ["derive"] }
shellexpand = "3.1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10.1"

# Testing
tempfile = "3.8"